{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 627,
  "lineage": "14d11c53-a768-e1be-80f8-0c0d1f0ac2b5",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06862a6ef1260bb02",
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:instance/i-02d899c89cf7c09aa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dockerzon-instance-profile",
            "id": "i-02d899c89cf7c09aa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dockerzon-ecs",
            "monitoring": false,
            "primary_network_interface_id": "eni-03c1a6aa60101e040",
            "private_dns": "ip-10-0-1-151.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-13-211-207-254.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.211.207.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-006756eb7a0a0cca9",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d01e5855712bc5c1",
            "tags": {
              "Name": "dockerzon-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09847148c0ef7a66f"
            ]
          },
          "dependencies": [
            "module.instances.aws_iam_instance_profile.instance-profile"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06862a6ef1260bb02",
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:instance/i-010bfd789374b8736",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dockerzon-instance-profile",
            "id": "i-010bfd789374b8736",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dockerzon-ecs",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ff62afbadbad27bd",
            "private_dns": "ip-10-0-3-254.ap-southeast-2.compute.internal",
            "private_ip": "10.0.3.254",
            "public_dns": "ec2-54-206-124-17.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.206.124.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-075c051ed8537c4cc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d6e839d44e7ea34",
            "tags": {
              "Name": "dockerzon-02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09847148c0ef7a66f"
            ]
          },
          "dependencies": [
            "module.instances.aws_iam_instance_profile.instance-profile"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "dockerzon-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:loadbalancer/app/dockerzon-lb-terraform/44a2bceec1a228b8",
            "arn_suffix": "app/dockerzon-lb-terraform/44a2bceec1a228b8",
            "dns_name": "dockerzon-lb-terraform-767910248.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:loadbalancer/app/dockerzon-lb-terraform/44a2bceec1a228b8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dockerzon-lb-terraform",
            "security_groups": [
              "sg-0b7429161a2cc32ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09d6e839d44e7ea34"
              },
              {
                "subnet_id": "subnet-0d01e5855712bc5c1"
              }
            ],
            "subnets": [
              "subnet-09d6e839d44e7ea34",
              "subnet-0d01e5855712bc5c1"
            ],
            "tags": {
              "Name": "dockerzon-lb-terraform"
            },
            "vpc_id": "vpc-01f2c79f328ce1caf",
            "zone_id": "Z1GM3OXH4ZPM65"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dockerzon-lb-http-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener/app/dockerzon-lb-terraform/44a2bceec1a228b8/67045ed48ba38a58",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener/app/dockerzon-lb-terraform/44a2bceec1a228b8/67045ed48ba38a58",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:loadbalancer/app/dockerzon-lb-terraform/44a2bceec1a228b8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.dockerzon-lb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dockerzon-lb-https-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener/app/dockerzon-lb-terraform/44a2bceec1a228b8/03c411baefb034a1",
            "certificate_arn": "arn:aws:acm:ap-southeast-2:216659404274:certificate/36b4b414-facc-46d3-8943-16339d444936",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg/3079a9f88ab8f9ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener/app/dockerzon-lb-terraform/44a2bceec1a228b8/03c411baefb034a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:loadbalancer/app/dockerzon-lb-terraform/44a2bceec1a228b8",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.dockerzon-lb",
            "module.alb.aws_lb_target_group.dockerzon-lb-tg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "path_based_routing",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg-temperature-api/2d4b1d8787f53df7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener-rule/app/dockerzon-lb-terraform/44a2bceec1a228b8/03c411baefb034a1/f75aaecd38c03cf9",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/weather/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/weather/*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener-rule/app/dockerzon-lb-terraform/44a2bceec1a228b8/03c411baefb034a1/f75aaecd38c03cf9",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener/app/dockerzon-lb-terraform/44a2bceec1a228b8/03c411baefb034a1",
            "priority": 99
          },
          "dependencies": [
            "module.alb.aws_lb_listener.dockerzon-lb-https-listener",
            "module.alb.aws_lb_target_group.dockerzon-lb-tg-temperature-api"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dockerzon-lb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg/3079a9f88ab8f9ea",
            "arn_suffix": "targetgroup/dockerzon-lb-tg/3079a9f88ab8f9ea",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "200",
                "path": "/health_check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg/3079a9f88ab8f9ea",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dockerzon-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dockerzon-lb-tg-terraform"
            },
            "target_type": "instance",
            "vpc_id": "vpc-01f2c79f328ce1caf"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dockerzon-lb-tg-temperature-api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg-temperature-api/2d4b1d8787f53df7",
            "arn_suffix": "targetgroup/dockerzon-lb-tg-temperature-api/2d4b1d8787f53df7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "200",
                "path": "/health_check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg-temperature-api/2d4b1d8787f53df7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dockerzon-lb-tg-temperature-api",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dockerzon-lb-tg-temperature-api"
            },
            "target_type": "instance",
            "vpc_id": "vpc-01f2c79f328ce1caf"
          }
        }
      ]
    }
  ]
}